8205699: assert(_owner_offset != 0) failed in javaClasses.cpp

Added java_util_concurrent_locks_AbstractOwnableSynchronizer::serialize.

Reviewed-by: ccheung, dholmes